<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esgi.davidlinhares.mobasso.News.NewsCreationActivity">

    <TextView
        android:id="@+id/news_banner_view_create"
        android:layout_width="0dp"
        android:layout_height="0sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="35sp"
        android:gravity="center_vertical"
        android:paddingStart="15sp"
        app:layout_constraintHeight_percent="0.15"
        android:background="@color/darkWhite"
        android:text="@string/title_news"
        android:fontFamily="@font/calibril"
        android:textColor="#000000"
        />

    <TextView
        android:id="@+id/article_title_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintTop_toBottomOf="@id/news_banner_view_create"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/calibril"
        android:text="@string/article_title_create"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/article_title_create_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/article_title_create"
        android:fontFamily="@font/calibril"
        android:textStyle="normal"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/article_details_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintTop_toBottomOf="@id/article_title_create_edit"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/calibril"
        android:text="@string/article_create_content"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/article_details_create_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:maxLines="50"
        app:layout_constraintTop_toBottomOf="@id/article_details_create"
        android:fontFamily="@font/calibril"
        android:textStyle="normal"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/article_img_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintTop_toBottomOf="@id/article_details_create_edit"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/calibril"
        android:text="@string/image"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/article_img_download"
        app:layout_constraintTop_toBottomOf="@id/article_img_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/article_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_name"
        android:background="@color/mainColor"
        />

    <Button
        android:id="@+id/article_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_img_download"
        app:layout_constraintBottom_toTopOf="@id/article_cancel"
        android:text="@string/send"
        android:fontFamily="@font/calibril"
        android:background="@color/mainColor"
        />

    <Button
        android:id="@+id/article_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        android:fontFamily="@font/calibril"
        android:background="@color/darkWhite"
        />
</android.support.constraint.ConstraintLayout>
